# lxqt-panel2

./: README.md
plugin-CMUD/: CMakeLists.txt  README.md  cmudplugin.cpp  cmudplugin.h
plugin-CMUD/translations/: CMUD.desktop.yaml
plugin-datetime/: CMakeLists.txt  CMakeLists0.txt  README.md  datetimeconfiguration.cpp  datetimeconfiguration.h  datetimeplugin.cpp  datetimeplugin.h
plugin-datetime/resources/: datetime.desktop.in
plugin-datetime/translations/: datetime.desktop.yaml  datetime.ts
